# Game-NPC-with-LLM

./: .gitignore  README.md  main.py  playground.py  pyproject.toml
actors/: character.py  npc.py
actors/prompts/: npc_location.md  npc_password.md
clients/: hf_wrapper.py  ollama_client.py
configs/: config.py
controllers/: input_handler.py  interaction_handler.py
game/controllers/: input_handler.py  interaction_handler.py
game/games/: game.py
game/maps/: map_generator.py
game/renderers/: renderer.py
game/ui/: manager.py
games/: game.py  states.py
levels/: level.py
llm/clients/: ollama_client.py
llm/prompts/: npc_location.md  npc_password.md
maps/: map_generator.py
renderers/: renderer.py
rl/: run_agent.py  run_agent_dqn.py  run_agent_ppo.py  run_cartpole.py  run_full_quest.py  run_go_to_npc.py  run_simple_maze.py  train.py  train_cartpole.py  train_full_quest.py  train_go_to_npc.py  train_ppo.py  train_simple_maze.py
rl/environments/: full_quest_env.py  full_quest_env_pass.py  go_to_npc_env.py  maze_env.py  simple_maze_env.py
rl/logs/: monitor.csv
rl/logs/PPO_1/: events.out.tfevents.1759926794.kangnam-Desktop-Ubuntu.408431.0
rl/logs/PPO_10/: events.out.tfevents.1759929956.kangnam-Desktop-Ubuntu.413527.0
rl/logs/PPO_11/: events.out.tfevents.1759930182.kangnam-Desktop-Ubuntu.413932.0
rl/logs/PPO_12/: events.out.tfevents.1759930504.kangnam-Desktop-Ubuntu.415060.0
rl/logs/PPO_13/: events.out.tfevents.1759931539.kangnam-Desktop-Ubuntu.416885.0
ui/: manager.py
utils/: random_coordinate.py
(+9 files in other folders)
