[project]
name = "simulator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    'accelerate>=1.10.1',
    'autoawq>=0.2.9; sys_platform == "linux"',
    "gymnasium>=1.2.1",
    "numpy>=2.3.3",
    "pygame>=2.6.1",
    "stable-baselines3[extra]>=2.7.0",
    "torch>=2.8.0",
    'transformers>=4.56.2',
]
